fix scroll on safari

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,9 @@
   .inner-layout {
     min-height: 100vh;
     height: 100vh;
+
+    /* mobile viewport bug fix */
+    min-height: -webkit-fill-available;
   }
 
   .inner-content {
